minor ui fix to even out spacing when index is removed

--- a/frontend/css/list-track-item.css
+++ b/frontend/css/list-track-item.css
@@ -51,7 +51,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin-right: var(--space-xs);
+    margin-right: var(--space-xl);
 }
 .list-track-item .foreground .position .position-value {
     text-align: right;
@@ -63,7 +63,7 @@
     flex: 1 1 auto;
     justify-content: flex-start;
     min-width: 0;
-    margin-inline: var(--space-l);
+    margin-right: var(--space-xl);
 }
 
 .list-track-item .foreground .info .title {
